<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" android:icon="@drawable/ic_menu_stations"/>
    <item android:id="@+id/settings" android:title="Preferences"></item><item android:id="@+id/ViewWeb" android:title="@string/ViewWeb" android:icon="@drawable/ic_menu_web"></item>
    <item android:id="@+id/ViewGauge1" android:title="@string/ViewGauge1" android:icon="@drawable/ic_menu_wind"></item>
    <item android:id="@+id/ViewMain" android:title="@string/ViewData" android:icon="@drawable/ic_menu_data"></item>
<!--     <item android:id="@+id/ViewLCD" android:title="@string/ViewLCD"></item> -->
    <item android:id="@+id/ViewWebcal" android:title="@string/ViewWebcam" android:icon="@drawable/ic_menu_webcam"></item>
    <item android:id="@+id/Tel" android:title="@string/Tel" android:icon="@drawable/ic_menu_tel"></item>
    
    
</menu>